--- a/CoCo/front-end/admin/managers/list-manager-history-page.html
+++ b/CoCo/front-end/admin/managers/list-manager-history-page.html
@@ -12,6 +12,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/list-manager-history-style.css">
+    <link rel="stylesheet" href="./css/pagination.css">
     <title>Xem lịch sử hoạt động người quản lý</title>
 </head>
 
@@ -67,7 +68,68 @@
                   <input type="text" class="searchbar-input" placeholder="Tìm kiếm hoạt động người quản lý">
                   <i class="fa-solid fa-magnifying-glass"></i>
               </div>
-              <div id="list-manager-history-table"></div>
+              <div class="filter">
+                <p id="filter-heading">Bộ lọc</p>
+                <div id="filters" class="row" style="clear: both;">
+                  <div class="col-lg-4 col-md-4 col-sm-12">
+                      <div class="dropdown">
+                          <button class="btn btn-light dropdown-toggle text-black" type="button"
+                              id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
+                              Sắp xếp theo 
+                          </button>
+                          <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                              <li><button class="dropdown-item" type="button">Username từ A->Z</button></li>
+                              <li><button class="dropdown-item" type="button">Username từ Z->A</button></li>
+                              <li><button class="dropdown-item" type="button">Thời gian từ gần nhất</button></li>
+                              <li><button class="dropdown-item" type="button">Thời gian từ xa nhất</button></li>
+                          </ul>
+                      </div>
+                  </div>
+                  <div class="col-lg-4 col-md-4 col-sm-12">
+                      <div class="dropdown">
+                          <button class="btn btn-light dropdown-toggle text-black" type="button"
+                              id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
+                              Lọc theo thời gian 
+                          </button>
+                          <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                              <li><button class="dropdown-item" type="button">Quý I 2022</button></li>
+                              <li><button class="dropdown-item" type="button">Quý IV 2021</button></li>
+                              <li><button class="dropdown-item" type="button">Quý III 2021</button></li>
+                              <li><button class="dropdown-item" type="button">Quý II 2021</button></li>
+                              <li><button class="dropdown-item" type="button">Quý I 2021</button></li>
+                          </ul>
+                      </div>
+                  </div>
+                  <div class="col-lg-4 col-md-4 col-sm-12">
+                    <div class="dropdown">
+                        <button class="btn btn-light dropdown-toggle text-black" type="button"
+                            id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
+                            Lọc theo phân quyền 
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                            <li><button class="dropdown-item" type="button">Nhu yếu phẩm</button></li>
+                            <li><button class="dropdown-item" type="button">Người bệnh</button></li>
+                        </ul>
+                    </div>
+                </div>
+              </div>
+            </div>
+            <div id="list-manager-history-table"></div>
+            <div class="page-container">
+                <button class="first-page" disabled>
+                  <i class="fas fa-angle-double-left"></i>
+                </button>
+                <button class="prev-page" disabled>
+                  <i class="fas fa-angle-left"></i>
+                </button>
+                <div id="pagination"></div>
+                <button class="next-page">
+                  <i class="fas fa-angle-right"></i>
+                </button>
+                <button class="last-page">
+                  <i class="fas fa-angle-double-right"></i>
+                </button>
+          </div>
       </div>
 
         <footer class="footer">
@@ -106,6 +168,7 @@
     <script src="https://kit.fontawesome.com/67328d2701.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="js/add-list-manager-history-table.js"></script>
+    <script src="js/pagination.js"></script>
 </body>
 
 </html>
