--- a/CoCoPay/front-end/sign-in.html
+++ b/CoCoPay/front-end/sign-in.html
@@ -30,7 +30,23 @@
         </section>
 
         <section class="content container-fluid py-5">
-            
+            <div class="login-form py-5 px-5">
+                <form>
+                    <div class="form-floating mb-3">
+                        <input class="form-control border-2 border-dark" id="floatingInput"
+                            placeholder="name@example.com">
+                        <label for="floatingInput">Số CMND/CCCD</label>
+                    </div>
+                    <div class="form-floating">
+                        <input type="password" class="form-control border-2 border-dark" id="floatingPassword"
+                            placeholder="Password">
+                        <label for="floatingPassword">Mật khẩu</label>
+                    </div>
+                    <button type="submit" class="sign-in">ĐĂNG NHẬP</button>
+                </form>
+                <a href="#" class="password-missing">Quên mật khẩu?</a>
+            </div>
+
         </section>
     </main>
 
