--- a/CoCo/front-end/admin/managers/add-manager-page.html
+++ b/CoCo/front-end/admin/managers/add-manager-page.html
@@ -8,9 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
         rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
         crossorigin="anonymous">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="./css/add-manager-style.css">
     <title>Thêm người quản lý</title>
 </head>
@@ -18,7 +19,7 @@
 <body>
     <main>
 
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <img src="../../images/Logo.png" alt="logo" style="height:50px;align-self:center;">
@@ -27,10 +28,10 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav justify-content-center mb-2 mb-lg-0">
+                <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                   <li class="nav-item dropdown">
                     <a class="nav-link active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Người quản lý
+                      NGƯỜI QUẢN LÝ
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li><a class="dropdown-item" href="#">Thêm người quản lý</a></li>
@@ -39,17 +40,17 @@
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Địa điểm cách ly, điều trị
+                      ĐỊA ĐIỂM CÁCH LY, ĐIỀU TRỊ
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li><a class="dropdown-item" href="#">Thêm địa điểm cách ly, điều trị</a></li>
                       <li><a class="dropdown-item" href="#">Danh sách địa điểm cách ly điều trị</a></li>
                     </ul>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">TÀI KHOẢN ADMIN</a>
+                </li>
                 </ul>
-                <div class="ms-auto">
-                  <div class="nav-menu"><i class="fa-solid fa-bars fa-2x"></i></div>
-                </div>
               </div>
             </div>
           </nav>
@@ -67,10 +68,10 @@
                 <h3 class="form-heading mb-3 p-2 ">Thêm tài khoản người quản lý</h3>
                 <form class="form-add-manager p-2">
                   <div class="form-group row">
-                    <label for="username" class="col-lg-5 col-sm-5 col-form-label">Tên người dùng</label>
-                    <div class="col-lg-7 col-sm-7">
-                      <input type="text" class="form-control" id="username">
-                    </div>
+                      <label for="username" class="col-lg-5 col-sm-5 col-form-label">Tên người dùng</label>
+                      <div class="col-lg-7 col-sm-7">
+                          <input type="text" class="form-control" id="username">
+                      </div> 
                   </div>
                   <div class="form-group row">
                     <label for="password" class="col-lg-5 col-sm-5 col-form-label">Mật khẩu</label>
@@ -87,10 +88,17 @@
                   <div class="form-group row">
                     <label  class="col-sm-5 col-form-label">Phân quyền</label>
                     <div class="col-sm-7">
-                        <input name = "patient" id="patient" value="patient" type="checkbox">
-                        <label for="patient" class="p-2">Người bệnh</label>
-                        <input name = "necessities" id="necessities" value="necessities" type="checkbox">
-                        <label for="necessities">Nhu yếu phẩm</label>
+                      <table>
+                        <tr>
+                          <td><input name = "patient" id="patient" value="patient" type="checkbox"></td>
+                          <th><label for="patient" class="p-2">Người bệnh</label></th>
+                        </tr>
+                        <tr>
+                          <td><input name = "necessities" id="necessities" value="necessities" type="checkbox"></td>
+                          <th><label for="necessities">Nhu yếu phẩm</label></th>
+                        </tr>
+                      </table>
+                        
                     </div>
                   </div>
                   <div class="row button">
