--- a/CoCo/front-end/admin/managers/list-manager-history-page.html
+++ b/CoCo/front-end/admin/managers/list-manager-history-page.html
@@ -8,52 +8,55 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
         rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
         crossorigin="anonymous">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/list-manager-history-style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="./css/pagination.css">
+    <link rel="stylesheet" href="../css/search-bar-style.css">
+    <link rel="stylesheet" href="../css/table-style.css">
+    <link rel="stylesheet" href="./css/list-manager-history-style.css">
     <title>Xem lịch sử hoạt động người quản lý</title>
 </head>
 
 <body onload="loadListManagerHistoryTable()">
     <main>
 
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="../../images/Logo.png" alt="logo" style="height:50px;align-self:center;">
+      <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="../../images/Logo.png" alt="logo" style="height:50px;align-self:center;">
+            </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+              <li class="nav-item dropdown">
+                <a class="nav-link active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  NGƯỜI QUẢN LÝ
                 </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav justify-content-center mb-2 mb-lg-0">
-                  <li class="nav-item dropdown">
-                    <a class="nav-link active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Người quản lý
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Thêm người quản lý</a></li>
-                      <li><a class="dropdown-item" href="#">Danh sách người quản lý</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Địa điểm cách ly, điều trị
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Thêm địa điểm cách ly, điều trị</a></li>
-                      <li><a class="dropdown-item" href="#">Danh sách địa điểm cách ly điều trị</a></li>
-                    </ul>
-                  </li>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">Thêm người quản lý</a></li>
+                  <li><a class="dropdown-item" href="#">Danh sách người quản lý</a></li>
                 </ul>
-                <div class="ms-auto">
-                  <div class="nav-menu"><i class="fa-solid fa-bars fa-2x"></i></div>
-                </div>
-              </div>
-            </div>
-          </nav>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  ĐỊA ĐIỂM CÁCH LY, ĐIỀU TRỊ
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">Thêm địa điểm cách ly, điều trị</a></li>
+                  <li><a class="dropdown-item" href="#">Danh sách địa điểm cách ly điều trị</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">TÀI KHOẢN ADMIN</a>
+            </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
         
         <img src="../../images/banner.png" alt="banner" class="banner">
 
