--- a/CoCo/front-end/related-people/package-list.html
+++ b/CoCo/front-end/related-people/package-list.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/67328d2701.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/5c86f907a0.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../manager/products/css/pagination.css">
     <link rel="stylesheet" href="./css/related.css">
     <link rel="stylesheet" href="./css/package-list.css">
-    
+
     <title>Danh sách gói nhu yếu phẩm</title>
 </head>
 
@@ -55,9 +55,6 @@
                 <div class="searchbar">
                     <input type="text" class="searchbar-input" placeholder="Tìm kiếm sản phẩm">
                     <i class="fa-solid fa-magnifying-glass"></i>
-                </div>
-                <div class="go-to-cart" style="float:right; margin-right: 30px;">
-                    <a href="cart.html"><img src="images/cart.png" alt="cart"></a>
                 </div>
                 <div id="package-filters" class="row" style="clear: both;">
                     <div class="col-lg-4 col-md-6 col-sm-12">
@@ -394,24 +391,28 @@
 
                 <div class="page-container">
                     <button class="first-page" disabled>
-                      <i class="fas fa-angle-double-left"></i>
+                        <i class="fas fa-angle-double-left"></i>
                     </button>
                     <button class="prev-page" disabled>
-                      <i class="fas fa-angle-left"></i>
+                        <i class="fas fa-angle-left"></i>
                     </button>
                     <div id="pagination"></div>
                     <button class="next-page">
-                      <i class="fas fa-angle-right"></i>
+                        <i class="fas fa-angle-right"></i>
                     </button>
                     <button class="last-page">
-                      <i class="fas fa-angle-double-right"></i>
+                        <i class="fas fa-angle-double-right"></i>
                     </button>
                 </div>
             </div>
-        </div>
-        </div>
 
-        <script></script>
+            <a href="cart.html">
+                <div id="go-to-cart">
+                    <img src="images/cart2.png" alt="">
+                </div>
+            </a>
+        </div>
+        </div>
         <footer class="footer">
             <div class="footer-top">
                 <div class="footer-box">
@@ -446,8 +447,8 @@
         </footer>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <script src="../admin/js/pagination.js"></script>
 </body>
 
