--- a/CoCo/front-end/related-people/package-list.html
+++ b/CoCo/front-end/related-people/package-list.html
@@ -103,7 +103,7 @@
                 </div>
 
                 <div class="container text-center">
-                    <div class="row">
+                    <div class="row hover-effect">
                         <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="card-view">
                                 <div class="image-details">
