--- a/CoCo/front-end/related-people/buy-success.html
+++ b/CoCo/front-end/related-people/buy-success.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv = "refresh" content = "3; url = information.html" />
+    <meta http-equiv="refresh" content="3; url = information.html" />
     <script src="https://kit.fontawesome.com/67328d2701.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -54,8 +54,16 @@
             <div id="success-notification-container">
                 <img src="images/success.png" alt="success_img"><br>
                 <div id="success-text">ĐÃ ĐẶT HÀNG THÀNH CÔNG</div>
+                
+                <div class="snippet" data-title=".dot-pulse">
+                    <div class="stage">
+                        <div class="dot-pulse"></div>
+                    </div>
+                </div>
+
                 <div id="return-home">
                     <a href="information.html">TRỞ LẠI TRANG CÁ NHÂN</a>
+                    (Tự chuyển trang sau 3s)
                 </div>
             </div>
         </div>
