--- a/CoCo/front-end/admin/managers/add-manager-page.html
+++ b/CoCo/front-end/admin/managers/add-manager-page.html
@@ -49,7 +49,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">TÀI KHOẢN ADMIN</a>
+                    <a class="nav-link" href="../admin-account.html">TÀI KHOẢN ADMIN</a>
                 </li>
                 </ul>
               </div>
@@ -61,7 +61,7 @@
         <div class="container">
             <nav style="--bs-breadcrumb-divider: '>'; --bs-breadcrumb-item-padding-x: 2px; --bs-breadcrumb-divider-color: #A19C9C; --bs-breadcrumb-font-size: 24sp;" aria-label="breadcrumb" class="nav-breadcrumb">
                 <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="#">Người quản lý</a></li>
+                  <li class="breadcrumb-item"><a href="./list-manager-page.html">Người quản lý</a></li>
                   <li class="breadcrumb-item active" aria-current="page">Thêm người quản lý</li>
                 </ol>
               </nav>
@@ -104,7 +104,7 @@
                   </div>
                   <div class="row button">
                     <div class="col-sm-10">
-                      <button type="submit" class="btn">Lưu</button>
+                      <button type="button" class="btn" onclick="window.location.href='./list-manager-page.html'">Lưu</button>
                     </div>
                   </div>
                 </form>
