--- a/CoCo/front-end/admin/managers/list-manager-page.html
+++ b/CoCo/front-end/admin/managers/list-manager-page.html
@@ -65,7 +65,7 @@
         <div class="container">
             <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb" class="nav-breadcrumb">
                 <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="#">Người quản lý</a></li>
+                  <li class="breadcrumb-item"><a href="./list-manager-page.html">Người quản lý</a></li>
                   <li class="breadcrumb-item active" aria-current="page">Xem danh sách người quản lý</li>
                 </ol>
               </nav>
@@ -89,7 +89,7 @@
                     <i class="fas fa-angle-double-right"></i>
                   </button>
               </div>
-              <div class="button-add">
+              <div class="button-add" onclick="window.location.href='./add-manager-page.html'">
                   <i class="fa-solid fa-plus fa-3x"></i>
               </div>
       </div>
