--- a/CoCo/front-end/admin/managers/manager-details-page.html
+++ b/CoCo/front-end/admin/managers/manager-details-page.html
@@ -62,7 +62,7 @@
         <div class="container">
             <nav style="--bs-breadcrumb-divider: '>'; --bs-breadcrumb-item-padding-x: 2px; --bs-breadcrumb-divider-color: #A19C9C; --bs-breadcrumb-font-size: 24sp;" aria-label="breadcrumb" class="nav-breadcrumb">
                 <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="#">Người quản lý</a></li>
+                  <li class="breadcrumb-item"><a href="./list-manager-page.html">Người quản lý</a></li>
                   <li class="breadcrumb-item active" aria-current="page">Nguyen Van A</li>
                 </ol>
               </nav>
@@ -78,7 +78,7 @@
                             </div>
                             <div id="name"></div>
                             <div class="button">
-                                <button type="button" class="custom-btn btn btn-dark text-white btn-sm">Khóa tài khoản</button>
+                                <button type="button" class="custom-btn btn btn-dark text-white btn-sm" onclick="window.location.href='./list-manager-page.html'">Khóa tài khoản</button>
                             </div>
                       </div>
                     </div>
