--- a/CoCo/front-end/related-people/package-list.html
+++ b/CoCo/front-end/related-people/package-list.html
@@ -55,8 +55,8 @@
                     <input type="text" class="searchbar-input" placeholder="Tìm kiếm sản phẩm">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
-                <div id="package-filters" class="row" style="clear: both;">
-                    <div class="col-lg-4 col-md-6 col-sm-12">
+                <div id="package-filters" class="row">
+                    <div class="col-lg-4 col-md-12 col-sm-12">
                         <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle text-black" type="button"
                                 id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
@@ -69,7 +69,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class=" col-lg-4 col-md-4 col-sm-12">
+                    <div class=" col-lg-4 col-md-12 col-sm-12">
                         <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle text-black" type="button"
                                 id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
@@ -84,7 +84,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-12">
+                    <div class="col-lg-4 col-md-12 col-sm-12">
                         <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle text-black" type="button"
                                 id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
@@ -102,7 +102,7 @@
                 </div>
 
                 <div class="container text-center">
-                    <div class="row hover-effect">
+                    <div class="row">
                         <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="card-view">
                                 <div class="image-details">
@@ -455,7 +455,10 @@
 
             <a href="cart.html">
                 <div id="go-to-cart">
-                    <img src="images/cart2.png" alt="">
+                    <img src="images/cart2.png" alt="cart2_img">
+                    <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                        3
+                        <span class="visually-hidden">unread messages</span>
                 </div>
             </a>
         </div>
